[gd_scene format=3 uid="uid://wekgtfrjcvyb"]

[ext_resource type="Script" uid="uid://bv8hu2oeuxsk1" path="res://Scripts/falling_plataform.gd" id="1_mpuj2"]
[ext_resource type="AudioStream" uid="uid://dxle4ijp8jg07" path="res://Sounds/platafom_stepped.wav" id="2_0nufm"]
[ext_resource type="AudioStream" uid="uid://pfow8m25wm37" path="res://Sounds/plataform_fall.wav" id="3_0nufm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xeit8"]
size = Vector2(32, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xeit8"]
load_path = "res://.godot/imported/falling-platform-brown.png-b7d76c2e5e7bcaa5881e0cd603cdb1b7.ctex"

[sub_resource type="Animation" id="Animation_xeit8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mpuj2"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5ds4"]
_data = {
&"RESET": SubResource("Animation_xeit8"),
&"shake": SubResource("Animation_mpuj2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpuj2"]
size = Vector2(32, 1)

[node name="FallingPlataform" type="AnimatableBody2D" unique_id=1052016339]
collision_mask = 2
script = ExtResource("1_mpuj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=613446481]
shape = SubResource("RectangleShape2D_xeit8")
one_way_collision = true

[node name="RespawnTimer" type="Timer" parent="." unique_id=504672131]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=961451008]
texture = SubResource("CompressedTexture2D_xeit8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2124028061]
libraries/ = SubResource("AnimationLibrary_d5ds4")

[node name="Stepped" type="Area2D" parent="." unique_id=866200657]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stepped" unique_id=709757410]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_mpuj2")
debug_color = Color(6.256998e-07, 0.64076316, 0.34970972, 0.41960785)

[node name="SteppedSound" type="AudioStreamPlayer" parent="." unique_id=1868017064]
stream = ExtResource("2_0nufm")
volume_db = -10.0

[node name="FallingSound" type="AudioStreamPlayer" parent="." unique_id=892689237]
stream = ExtResource("3_0nufm")
volume_db = -10.0
pitch_scale = 1.5

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Stepped" to="." method="_on_stepped_area_entered"]
[connection signal="body_entered" from="Stepped" to="." method="_on_stepped_body_entered"]
